# hopperscript

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  syntax.md
src/: blockdata.rhai  compile.rs  main.rs
src/cli/: mod.rs
src/compile/: grammar.rs  types.rs
src/compiler/: ast.rs  blockdata.rhai  data.rhai  define.rs  export.rs  generator.rs  get_data.rs  getdata.rs  mod.rs  newdata.json  script.pest  std.yaml  types.rs  typess.rs  utils.rs
src/compiler/data/: blocks.rhai  objects.json  objects.rhai
tests/: 1.txt  2.txt
