[package]
name = "hopperscript"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli/mod.rs"

[lib]
name = "lib"
path = "src/compiler/mod.rs"

[dependencies]
chumsky = "0.8.0"
ariadne = "0.1.5"
radix_fmt = "1.0.0"
serde = "1.0.140"

[dependencies.rhai]
version = "1.8.0"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]