[package]
name = "hopperscript"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli/mod.rs"

[lib]
name = "lib"
path = "src/compiler/mod.rs"

[dependencies]
chumsky = "0.8.0"
ariadne = "0.1.5"
radix_fmt = "1.0.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.19"
regex = "1.7.3"

[dependencies.rhai]
version = "1.8.0"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]
